--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-drag",
+  "name": "vue-drag-directive",
   "version": "0.1.0",
   "description": "A Vue directive make component or element draggable.",
   "main": "lib/index.js",
